Im going to bed. Good Night.

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -4,6 +4,7 @@
   ##########################
   # PEACE FLAGS
   ##########################
+
   FRA_Cucked_Germany:0 "Germany Has Been Defeated"
   FRA_Cucked_Britain:0 "Britain Has Been Defeated"
   FRA_Peace_With_Britain:0 "A Peace With Honour Has Been Signed With Britain"
@@ -11,6 +12,7 @@
   ##########################
   # Leader Descriptions
   ##########################
+
   PB_Jacques_Doriot_Desc:0 "§YBorn:§! 26/9/1898\n\n§YJacques Doriot§! is something of an enigma in French politics. Born to a working class family in Saint Denis, near Paris. At an early age, Doriot was exposed to the revolutionary politics of wartime France. Far too young to join the military at the onset of the Great War, Doriot could only watch from the sidelines as France began to shudder and break under the strain of war. As supplies dwindled daily and the sounds of gunfire approached Paris, Doriot's family fled to Orléans, where they would remain until the end of the conflict.\n\nThe collapse of the French Empire and the imposition of a Republic would catapult the nation into a period of intense unrest. Revolutionaries, restorationists and common thugs battled in the streets over what was left of the French corpse. It was in this pressure cooker political scene that Doriot would begin his rise to power. Initially a member of the Socialist Youth League, he abandoned left wing politics after the failed September Paris Uprising in 1926. Instead, he aligned himself with the newly formed French Popular Front and Marcel Déat, and by 1928 the FPF had taken the reigns of the Republic in a coalition with the pro-monarchist Action Française. Déat died suddenly in 1929 and the subsequent power struggle ended with Doriot seizing control of the party, though at the cost of major concessions to the AF and the Left-Nationalists. Now the de-facto dictator of France, Jacques Doriot seeks revenge against the Germans and the re-establishment of France's dominance in Europe. The French population, radicalized by Long Depression and the Treaty of Tours, stand united, at least on paper, with the Grand Marshal's vision of a new imperial France.\n\n§RAcross the border lies the enemy of the French people, and it is the holy duty of the Grand Marshal to exorcise this degenerate Judeo-Germanic curse from Europe, no matter the cost!§!"
 
   PB_Charles_Muarras_Desc:0 "§YBorn:§! 20/4/1868\n\n§YCharles Maurras§! is considered by some as France's most loyal patriot, and by others as a crooked old fool that believes in bygone traditions. Whatever the case may be one thing for sure is Maurras and his cronies remain adamant on the return of the Bourbon dynasty, which has remained in exile in Corsica since the Great War. Before the Great War Maurras was a self-employed author mainly writing non-fiction books on political science, taking inspiration from various pre-20th century philosophies, namely Existentialism and Phenomenology.\n\nMaurras lived a rather poor life finding only minor success in a few written texts but by the end of the Great War this difficulty only became worse. Food stalls became a permanent fixture of Maurras' life until a small pro-monarchist printing agency hired him. From there Maurras rose through the ranks and established himself as a fairly notable writer, ultimately becoming head of the New Kings League newspaper company.\n\nBy 1927 the political landscape of France was by all definitions an utter shit show. Strikes and protests occurred almost daily and from this point on Maurras started to present himself as the man with all the solutions, gathering public support and finding a 'comfortable' position in the newly founded Front Populaire Français. Today Charles Maurras stands victorious in the triumvirate and though stability is finally restored, to some degree, reconstruction and preperation for Europe's 'darkest years' is required if France is to outlive the storm.\n\n§RAll heil Maurras!§!"
@@ -20,11 +22,14 @@
   ##########################
   # Focus Tooltips
   ##########################
+
   PB_FRA_Purge_tt:0 "\nIt is time to end this political charade once and for all. Let the disobedient rot, they had no place in Doriot's new France anyway."
+  PB_FRA_Attack_Germany_tt:0 "\nThe war will be automatically triggered if this focus hasn't been completed before §PSeptember 1937§!"
 
   ##########################
   # Factionalism/Nationalistic Fervour
   ##########################
+
   Factionalism_tt:0 "Our current §OFactionalism§! is [?FRA_Factionalism|%0]"
   Factionalism_tt_delayed:0 "France's political system is at odds with each other. Calling it a Far-right political union would be a gross understatement of the bribes and corruption that breathe throughout the French state. At all times there is someone, somewhere, with a differing opinion. These individuals must be hunted down until their very extinction.\n\nDepending on your level of Factionalism your stability and political power factors will increase/decrease. The Factionalism Fervour modifier will also tick up by a variable of §R+1§! every month so be sure to keep it maintained!\n\nThese modifiers adjust §YMonthly§!"
   FRA_Low_Factionalism_Idea:0 "Low Factionalism"
@@ -56,6 +61,7 @@
   ##########################
   # TRAITS
   ##########################
+
   trait_FRA_MIL_Loyalties:0 "Militarist Loyalties"
   trait_FRA_MIL_Loyalties_desc:0 "This general is loyal to the militarist faction of the French government."
   trait_FRA_SP_Loyalties:0 "Sécurité Publique Loyalties"
@@ -65,6 +71,7 @@
   ##########################
   # TOP BAR
   ##########################
+
   FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 298 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n    - Balance France's political Factionalism\n    - Deal with the 1930s unemployment crisis\n    - Fuel the people's want for war\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, and their empire. \n\n§YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\nThe former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\nThe §YThe Republic of France§! is a §YGreat Power§!"
 
   ##########################
@@ -91,6 +98,7 @@
   FRA_PB_robert_vigan:0 "Robert Le Vigan"
 
   FRA_PB_robert_vigan_desc:0 "§YBorn:§! §g07/01/1900\n\n§!§YRobert Le Vigan§! §gis celebrity turned politician. Starring in multiple pro Neo-Imperialist propoganda films earned Vigan popularity with the French people, and Popular Front party members as well. His greatest hit was his role as a Great War veteran in the movie 'et la guerre' (and war). While a avid supporter of Doriot's regime the only real use Vigan serves is his more than abundant political connections with the French upper and middle classes. §!\n\n"
+  
   #MUARRAS
   FRA_PB_raphael_alibert:0 "Raphaël Alibert"
 
@@ -142,6 +150,7 @@
   ##########################
   # EVENTS
   ##########################
+
   French.1.t:0 "Victory in Frankfurt"
   French.1.d:0 "With the German menace finally pushed back to its capital, French forces were able to swiftly capture the administrative capital of the German Empire. With the fall of Frankfurt, led by the chaos and division plagueing the Germans, several German officials and commanders have proposed negotiations regarding peace and ending our German war effort. With the British still on our tail, a German peace could allow us to focus our attention on the decadent British Empire. The new pro-French government has been established in Munich under the German nationalist Anton Drexler and a group of other French collaborators that are willing to fight against the British empire and liberal democracy."
   French.1.a:0 "Victory at last"
@@ -794,6 +803,7 @@
   ##########################
   # IDEAS
   ##########################
+
   PB_FRA_Crumbling_Coalition:0 "The Crumbling Coalition"
   PB_FRA_Crumbling_Coalition_desc:0 "The Republic's government is currently dominated by a triumvirate between three major power blocs. Jacques Doriot's Ultranationalist faction, Charles Maurras' Restorationists, and the People's Unitary Front lead by Inessa Armand. While previously these factions cooperated to keep power away from more moderate voices, their recent political dominance has turned their ambitions against each other. The triumverate is rapidly degrading as the three leaders prepare to take down the others and claim the future of the French state for themselves."
   PB_FRA_Bitter_Revanchism:0 "Bitter Revanchism"
@@ -878,12 +888,12 @@
   FRA_A_Beating_Heart_For_France:0 "A Beating Heart For France"
   FRA_A_Beating_Heart_For_France_2:0 "A Beating Heart For France"
   FRA_A_Beating_Heart_For_France_3:0 "A Beating Heart For France"
+  FRA_A_Beating_Heart_For_France_4:0 "A Beating Heart For France"
+  FRA_A_Beating_Heart_For_France_5:0 "A Beating Heart For France"
 
   PB_FRA_mas:0 "MAS"
 
   FRA_The_Autometro:0 "The Autométro" 
-  FRA_An_Industry_That_Never_Sleeps:0 "An Industry That Never Sleeps"
-  FRA_Pride_In_Our_Work:0 "Pride In Our Work"
   FRA_City_Investments:0 "City Investments"
 
   FRA_blockade_policy_1:0 "Blockade Policy"
@@ -928,6 +938,7 @@
   ##########################
   # FOCUS
   ##########################
+
   PB_FRA_Purge:0 "An Evening in Paris"
   PB_FRA_Purge_desc:0 "With the Triumvirate's political dominance all but guaranteed and Doriot effectively being both President and Prime minister of France the days coming will undoubtedly be a literal and figurative mess. The left-nationalists and the monarchists are aware of Doriot's unhinged power and as of recently rumours have spread that the SP is planning a coup in support of him. Whatever the case may be one thing for sure is that the future of France will be decided by the days following, and the rest of the world for that matter.   "
 
@@ -1100,7 +1111,6 @@
   PB_FRA_Connect_To_The_Wireless_World:0 "Connect To The Wireless World"
   PB_FRA_Populate_Or_Perish:0 "Populate Or Perish"
   
-  
   PB_FRA_Remilitarize_Lorraine:0 "Remilitarize Lorraine"
   PB_FRA_Remilitarize_Lorraine_desc:0 "For too long the german enforced demilitarization of our eastern lands has been tolerated, with the german people unprepared for war, the time is right to fully enforce our sovereignty!"
   PB_FRA_Befriend_Russia:0 "Befriend Russia"
@@ -1225,6 +1235,7 @@
   PB_FRA_Marine_Training_Programs:0 "Marine Training Programs"
 
   PB_FRA_A_New_World_Order:0 "A New World Order"
+  PB_FRA_A_New_World_Order_desc:0 "The Earth in all her beauty and magnificence laid no different to a desecrated corpse; bloody, beaten, and bruised. Yet in all that destruction and death beauty once again emerged, instead of green fields and busy urban streets it had altered itself into something new, in its infancy it may have even been unrecognizable but now we all know what it had become, war, along with all its human made inventions. "
   PB_FRA_Collaborator_Britain:0 "Collaborator: §YBritain§!"
   PB_FRA_Collaborator_Nuremberg:0 "Collaborator: §YNuremberg§!"
   PB_FRA_Collaborator_Italy:0 "Collaborator: §YItaly§!"
@@ -1431,6 +1442,7 @@
   ##########################
   # TOOLTIPS
   ##########################
+
   FRA_SP_reshuffle_xavier:0 "The Current SP leader will be replaced with Xavier Vallat"
 
   FRA_remove_ministers:0 "Our ministers will be removed and replaced with new ones"
@@ -1524,42 +1536,43 @@
   ##########################
   # FRENCH COLLABORATION IN GERMANY
   ##########################
- MGE_ni:0 "Nuremberg Germany"
- MGE_ni_DEF:0 "Nuremberg Germany"
- MGE_ds:0 "Nuremberg Germany"
- MGE_ds_DEF:0 "Nuremberg Germany"
- MGE_rc:0 "Nuremberg Germany"
- MGE_rc_DEF:0 "Nuremberg Germany"
- MGE_an:0 "Nuremberg Germany"
- MGE_an_DEF:0 "Nuremberg Germany"
- MGE_cn:0 "Nuremberg Germany"
- MGE_cn_DEF:0 "Nuremberg Germany"
- MGE_lb:0 "Nuremberg Germany"
- MGE_lb_DEF:0 "Nuremberg Germany"
- MGE_ss:0 "Nuremberg Germany"
- MGE_ss_DEF:0 "Nuremberg Germany"
- MGE_jc:0 "German Council Republic"
- MGE_jc_DEF:0 "German Council Republic"
- MGE_ni_ADJ:0 "German"
- MGE_rc_ADJ:0 "German"
- MGE_lb_ADJ:0 "German"
- MGE_ss_ADJ:0 "German"
- MGE_jc_ADJ:0 "German"
- MGE_ds_ADJ:0 "German"
- MGE_cn_ADJ:0 "German"
- MGE_an_ADJ:0 "German"
 
- MGE_ds_party_long:0 "Französische Militärverwawltung"
- MGE_ds_party:0 "FM"
- MGE_ni_party_long:0 "Nationale Kollektive Deutsche Partei"
- MGE_ni_party:0 "NKDP"
+  MGE_ni:0 "Nuremberg Germany"
+  MGE_ni_DEF:0 "Nuremberg Germany"
+  MGE_ds:0 "Nuremberg Germany"
+  MGE_ds_DEF:0 "Nuremberg Germany"
+  MGE_rc:0 "Nuremberg Germany"
+  MGE_rc_DEF:0 "Nuremberg Germany"
+  MGE_an:0 "Nuremberg Germany"
+  MGE_an_DEF:0 "Nuremberg Germany"
+  MGE_cn:0 "Nuremberg Germany"
+  MGE_cn_DEF:0 "Nuremberg Germany"
+  MGE_lb:0 "Nuremberg Germany"
+  MGE_lb_DEF:0 "Nuremberg Germany"
+  MGE_ss:0 "Nuremberg Germany"
+  MGE_ss_DEF:0 "Nuremberg Germany"
+  MGE_jc:0 "German Council Republic"
+  MGE_jc_DEF:0 "German Council Republic"
+  MGE_ni_ADJ:0 "German"
+  MGE_rc_ADJ:0 "German"
+  MGE_lb_ADJ:0 "German"
+  MGE_ss_ADJ:0 "German"
+  MGE_jc_ADJ:0 "German"
+  MGE_ds_ADJ:0 "German"
+  MGE_cn_ADJ:0 "German"
+  MGE_an_ADJ:0 "German"
 
- PB_FRA_Partisans:0 "Deutsche Partisanenfront"
- PB_FRA_Partisans_desc:0 "Due to the complete hatred of all Germans for the recent peace without honor against the French Republic, many have turned their heads towards their rifles, fighting a guerilla warfare against the German government in Nuremberg and destroying any supplylines and industry that could help the French war effort in Europe and Africa."
- PB_MGE_German_Forces:0 "German Republican Forces"
- PB_MGE_German_Forces_desc:0 "In an effort to help the French War Effort, the German Republic in Nuremberg has formed a formal republican army. The conscription of all Germans, while effectively enlarging our armed forces, has made the war extremely unpopular in almost every corner of the republic."
- PB_MGE_Peace_1:0 "Peace of Nürnberg"
- PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. Germany shall be completely unable to field a proper army untill the treaty is out of effect and Germany will pay France 20% of its economy to repay for the damage done to the French people during the First and Second Great War."
+  MGE_ds_party_long:0 "Französische Militärverwawltung"
+  MGE_ds_party:0 "FM"
+  MGE_ni_party_long:0 "Nationale Kollektive Deutsche Partei"
+  MGE_ni_party:0 "NKDP"
+
+  PB_FRA_Partisans:0 "Deutsche Partisanenfront"
+  PB_FRA_Partisans_desc:0 "Due to the complete hatred of all Germans for the recent peace without honor against the French Republic, many have turned their heads towards their rifles, fighting a guerilla warfare against the German government in Nuremberg and destroying any supplylines and industry that could help the French war effort in Europe and Africa."
+  PB_MGE_German_Forces:0 "German Republican Forces"
+  PB_MGE_German_Forces_desc:0 "In an effort to help the French War Effort, the German Republic in Nuremberg has formed a formal republican army. The conscription of all Germans, while effectively enlarging our armed forces, has made the war extremely unpopular in almost every corner of the republic."
+  PB_MGE_Peace_1:0 "Peace of Nürnberg"
+  PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. Germany shall be completely unable to field a proper army untill the treaty is out of effect and Germany will pay France 20% of its economy to repay for the damage done to the French people during the First and Second Great War."
 
 
   MGE_peace_of_nuremberg:0 "Peace of Nürnberg"
@@ -1587,6 +1600,7 @@
   ##########################
   # COSMETIC TAGS
   ##########################
+
   FRA_Dorito_ni:0 "National State of France"
   FRA_Dorito_ni_DEF:0 "National State of France"
   FRA_Dorito_ds:0 "National State of France"
