--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -1,6 +1,72 @@
 ﻿l_english:
 
   ##########################
+  #POP HAPPINESS
+  ##########################
+  PB_RUS_Decisions_Pop_Happiness:0 "The Russian State"
+  PB_RUS_Decisions_Pop_Happiness_desc:0 "\n\n                                              Social Class Satisfaction Levels\n\n\n          £RUS_Nobility                     £RUS_Elites                   £RUS_Military                       £RUS_Workers                          £RUS_Peasants\n\n\n  The Nobility      The Leisured      The Military      The Craftsman      The Peasants\n  [get_nobility_satisfaction]      [get_elites_satisfaction]       [get_military_satisfaction]        [get_workers_satisfaction]          [get_peasants_satisfaction]\n\n      Growth:              Growth:               Growth:                 Growth:                    Growth:\n\n  [get_nobility_satisfaction_growth]           [get_nobility_satisfaction_growth]           [get_nobility_satisfaction_growth]             [get_nobility_satisfaction_growth]                 [get_nobility_satisfaction_growth]\n\nThe Rusisan nation is full of different social classes; mainly divided into The Nobility, The Leisured, The Military, The Craftsmen, and The Peasants. Maintaining a happy populace is key in ensuring a stable and war ready nation, meeting/not meeting the wants of these classes will grant various buffs/debuffs accordingly. Growth is a monthly measure of a specific classes change in happiness, it can either read positive, negative or neutral variables with said variables being either 0.5, 1, or 1.5.\n\n"
+  
+  RUS_Nobility_Satisfaction_High:0 "Are §GPleased§!"
+  RUS_Nobility_Satisfaction_Med:0 "Are §YContent§!"
+  RUS_Nobility_Satisfaction_Low:0 "Are §RFurious§!"
+
+  RUS_Nobility_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
+  RUS_Nobility_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
+  RUS_Nobility_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
+  RUS_Nobility_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
+  RUS_Nobility_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
+  RUS_Nobility_Satisfaction_Growth_Low_Neg:0 "£RUS_Arrow_Down §R-0.5§!"
+  RUS_Nobility_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+   
+  RUS_Elites_Satisfaction_High:0 "Are §GPleased§!"
+  RUS_Elites_Satisfaction_Med:0 "Are §YContent§!"
+  RUS_Elites_Satisfaction_Low:0 "Are §RFurious§!"
+
+  RUS_Elites_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
+  RUS_Elites_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
+  RUS_Elites_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
+  RUS_Elites_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
+  RUS_Elites_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
+  RUS_Elites_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
+  RUS_Elites_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+
+  RUS_Military_Satisfaction_High:0 "Are §GPleased§!"
+  RUS_Military_Satisfaction_Med:0 "Are §YContent§!"
+  RUS_Military_Satisfaction_Low:0 "Are §RFurious§!"
+
+  RUS_Military_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
+  RUS_Military_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
+  RUS_Military_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
+  RUS_Military_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
+  RUS_Military_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
+  RUS_Military_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
+  RUS_Military_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+
+  RUS_Workers_Satisfaction_High:0 "Are §GPleased§!"
+  RUS_Workers_Satisfaction_Med:0 "Are §YContent§!"
+  RUS_Workers_Satisfaction_Low:0 "Are §RFurious§!"
+
+  RUS_Workers_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
+  RUS_Workers_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
+  RUS_Workers_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
+  RUS_Workers_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
+  RUS_Workers_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
+  RUS_Workers_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
+  RUS_Workers_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+
+  RUS_Peasants_Satisfaction_High:0 "Are §GPleased§!"
+  RUS_Peasants_Satisfaction_Med:0 "Are §YContent§!"
+  RUS_Peasants_Satisfaction_Low:0 "Are §RFurious§!"
+
+  RUS_Peasants_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
+  RUS_Peasants_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
+  RUS_Peasants_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
+  RUS_Peasants_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
+  RUS_Peasants_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
+  RUS_Peasants_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
+  RUS_Peasants_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+
+  ##########################
   #POWER STRUGGLE
   ##########################
   PB_RUS_Death_Taxes_And_Royalty_tt:0 "\nThe future of Russia will be determined in the following months"
