Russian Pop Satisfaction Mechanic Done Plus Focus Tree Work

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -10,12 +10,12 @@
   PB_RUS_Nobility_Satisfaction_Growth_1_Neg_tt:0 "Nobility Satisfaction Growth Will Change By §R-1§!"
   PB_RUS_Nobility_Satisfaction_Growth_0.5_Neg_tt:0 "Nobility Satisfaction Growth Will Change By §R-0.5§!"
 
-  PB_RUS_Elites_Satisfaction_Growth_1.5_tt:0 "Leisured Satisfaction Growth Will Change By §G+1.5§!"
-  PB_RUS_Elites_Satisfaction_Growth_1_tt:0 "Leisured Satisfaction Growth Will Change By §G+1§!"
-  PB_RUS_Elites_Satisfaction_Growth_0.5_tt:0 "Leisured Satisfaction Growth Will Change By §G+0.5§!"
-  PB_RUS_Elites_Satisfaction_Growth_1.5_Neg_tt:0 "Leisured Satisfaction Growth Will Change By §R-1.5§!"
-  PB_RUS_Elites_Satisfaction_Growth_1_Neg_tt:0 "Leisured Satisfaction Growth Will Change By §R-1§!"
-  PB_RUS_Elites_Satisfaction_Growth_0.5_Neg_tt:0 "Leisured Satisfaction Growth Will Change By §R-0.5§!"
+  PB_RUS_Elites_Satisfaction_Growth_1.5_tt:0 "Elite Satisfaction Growth Will Change By §G+1.5§!"
+  PB_RUS_Elites_Satisfaction_Growth_1_tt:0 "Elite Satisfaction Growth Will Change By §G+1§!"
+  PB_RUS_Elites_Satisfaction_Growth_0.5_tt:0 "Elite Satisfaction Growth Will Change By §G+0.5§!"
+  PB_RUS_Elites_Satisfaction_Growth_1.5_Neg_tt:0 "Elite Satisfaction Growth Will Change By §R-1.5§!"
+  PB_RUS_Elites_Satisfaction_Growth_1_Neg_tt:0 "Elite Satisfaction Growth Will Change By §R-1§!"
+  PB_RUS_Elites_Satisfaction_Growth_0.5_Neg_tt:0 "Elite Satisfaction Growth Will Change By §R-0.5§!"
 
   PB_RUS_Military_Satisfaction_Growth_1.5_tt:0 "Military Satisfaction Growth Will Change By §G+1.5§!"
   PB_RUS_Military_Satisfaction_Growth_1_tt:0 "Military Satisfaction Growth Will Change By §G+1§!"
@@ -24,82 +24,82 @@
   PB_RUS_Military_Satisfaction_Growth_1_Neg_tt:0 "Military Satisfaction Growth Will Change By §R-1§!"
   PB_RUS_Military_Satisfaction_Growth_0.5_Neg_tt:0 "Military Satisfaction Growth Will Change By §R-0.5§!"
 
-  PB_RUS_Workers_Satisfaction_Growth_1.5_tt:0 "Craftsman Satisfaction Growth Will Change By §G+1.5§!"
-  PB_RUS_Workers_Satisfaction_Growth_1_tt:0 "Craftsman Satisfaction Growth Will Change By §G+1§!"
-  PB_RUS_Workers_Satisfaction_Growth_0.5_tt:0 "Craftsman Satisfaction Growth Will Change By §G+0.5§!"
-  PB_RUS_Workers_Satisfaction_Growth_1.5_Neg_tt:0 "Craftsman Satisfaction Growth Will Change By §R-1.5§!"
-  PB_RUS_Workers_Satisfaction_Growth_1_Neg_tt:0 "Craftsman Satisfaction Growth Will Change By §R-1§!"
-  PB_RUS_Workers_Satisfaction_Growth_0.5_Neg_tt:0 "Craftsman Satisfaction Growth Will Change By §R-0.5§!"
+  PB_RUS_Workers_Satisfaction_Growth_1.5_tt:0 "Worker Satisfaction Growth Will Change By §G+1.5§!"
+  PB_RUS_Workers_Satisfaction_Growth_1_tt:0 "Worker Satisfaction Growth Will Change By §G+1§!"
+  PB_RUS_Workers_Satisfaction_Growth_0.5_tt:0 "Worker Satisfaction Growth Will Change By §G+0.5§!"
+  PB_RUS_Workers_Satisfaction_Growth_1.5_Neg_tt:0 "WorkerSatisfaction Growth Will Change By §R-1.5§!"
+  PB_RUS_Workers_Satisfaction_Growth_1_Neg_tt:0 "Worker Satisfaction Growth Will Change By §R-1§!"
+  PB_RUS_Workers_Satisfaction_Growth_0.5_Neg_tt:0 "Worker Satisfaction Growth Will Change By §R-0.5§!"
 
-  PB_RUS_Peasants_Satisfaction_Growth_1.5_tt:0 "Peasants Satisfaction Growth Will Change By §G+1.5§!"
-  PB_RUS_Peasants_Satisfaction_Growth_1_tt:0 "Peasants Satisfaction Growth Will Change By §G+1§!"
-  PB_RUS_Peasants_Satisfaction_Growth_0.5_tt:0 "Peasants Satisfaction Growth Will Change By §G+0.5§!"
-  PB_RUS_Peasants_Satisfaction_Growth_1.5_Neg_tt:0 "Peasants Satisfaction Growth Will Change By §R-1.5§!"
-  PB_RUS_Peasants_Satisfaction_Growth_1_Neg_tt:0 "Peasants Satisfaction Growth Will Change By §R-1§!"
-  PB_RUS_Peasants_Satisfaction_Growth_0.5_Neg_tt:0 "Peasants Satisfaction Growth Will Change By §R-0.5§!"
+  PB_RUS_Peasants_Satisfaction_Growth_1.5_tt:0 "Peasant Satisfaction Growth Will Change By §G+1.5§!"
+  PB_RUS_Peasants_Satisfaction_Growth_1_tt:0 "Peasant Satisfaction Growth Will Change By §G+1§!"
+  PB_RUS_Peasants_Satisfaction_Growth_0.5_tt:0 "Peasant Satisfaction Growth Will Change By §G+0.5§!"
+  PB_RUS_Peasants_Satisfaction_Growth_1.5_Neg_tt:0 "Peasant Satisfaction Growth Will Change By §R-1.5§!"
+  PB_RUS_Peasants_Satisfaction_Growth_1_Neg_tt:0 "Peasant Satisfaction Growth Will Change By §R-1§!"
+  PB_RUS_Peasants_Satisfaction_Growth_0.5_Neg_tt:0 "Peasant Satisfaction Growth Will Change By §R-0.5§!"
 
   PB_RUS_Decisions_Pop_Happiness:0 "The Russian State"
-  PB_RUS_Decisions_Pop_Happiness_desc:0 "\n\n                                              Social Class Satisfaction Levels\n\n\n          £RUS_Nobility                     £RUS_Elites                   £RUS_Military                       £RUS_Workers                          £RUS_Peasants\n\n\n  The Nobility      The Leisured      The Military      The Craftsman      The Peasants\n  [get_nobility_satisfaction]      [get_elites_satisfaction]       [get_military_satisfaction]        [get_workers_satisfaction]          [get_peasants_satisfaction]\n\n      Growth:              Growth:               Growth:                 Growth:                    Growth:\n\n  [get_nobility_satisfaction_growth]           [get_nobility_satisfaction_growth]           [get_nobility_satisfaction_growth]             [get_nobility_satisfaction_growth]                 [get_nobility_satisfaction_growth]\n\nThe Rusisan nation is full of different social classes; mainly divided into The Nobility, The Leisured, The Military, The Craftsmen, and The Peasants. Maintaining a happy populace is key in ensuring a stable and war ready nation, meeting/not meeting the wants of these classes will grant various buffs/debuffs accordingly. Growth is a monthly measure of a specific classes change in happiness, it can either read positive, negative or neutral variables with said variables being either 0.5, 1, or 1.5.\n\n"
-  
-  RUS_Nobility_Satisfaction_High:0 "Are §GPleased§!"
-  RUS_Nobility_Satisfaction_Med:0 "Are §YContent§!"
-  RUS_Nobility_Satisfaction_Low:0 "Are §RFurious§!"
+  PB_RUS_Decisions_Pop_Happiness_desc:0 "\n                                                   Social Class Satisfaction Levels\n\n\n\n\n\n\n\n\n\n\n\n\nThe Rusisan nation is full of different social classes; mainly divided into The Nobility, The Elites, The Military, The Workers, and The Peasants. Maintaining a happy populace is key in ensuring a stable and war ready nation, meeting/not meeting the wants of these classes will grant various buffs/debuffs accordingly. Growth is a monthly measure of a specific classes change in happiness, it can either read positive, negative or neutral variables with said variables being either 0.5, 1, or 1.5.\n"
 
-  RUS_Nobility_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
-  RUS_Nobility_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
-  RUS_Nobility_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
-  RUS_Nobility_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
-  RUS_Nobility_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
-  RUS_Nobility_Satisfaction_Growth_Low_Neg:0 "£RUS_Arrow_Down §R-0.5§!"
-  RUS_Nobility_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+  RUS_Nobility_Satisfaction_High:0 "  £RUS_Nobility\n\n\nThe Nobility\nAre §GPleased§!"
+  RUS_Nobility_Satisfaction_Med:0 "  £RUS_Nobility\n\n\nThe Nobility\nAre §YContent§!"
+  RUS_Nobility_Satisfaction_Low:0 "  £RUS_Nobility\n\n\nThe Nobility\nAre §RFurious§!"
+
+  RUS_Nobility_Satisfaction_Growth_High_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1.5§!"
+  RUS_Nobility_Satisfaction_Growth_Med_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1§!"
+  RUS_Nobility_Satisfaction_Growth_Low_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+0.5§!"
+  RUS_Nobility_Satisfaction_Growth_High_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1.5§!"
+  RUS_Nobility_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
+  RUS_Nobility_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
+  RUS_Nobility_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
    
-  RUS_Elites_Satisfaction_High:0 "Are §GPleased§!"
-  RUS_Elites_Satisfaction_Med:0 "Are §YContent§!"
-  RUS_Elites_Satisfaction_Low:0 "Are §RFurious§!"
+  RUS_Elites_Satisfaction_High:0 "  £RUS_Elites\n\n\nThe Elites\nAre §GPleased§!"
+  RUS_Elites_Satisfaction_Med:0 "  £RUS_Elites\n\n\nThe Elites\nAre §YContent§!"
+  RUS_Elites_Satisfaction_Low:0 "  £RUS_Elites\n\n\nThe Elites\nAre §RFurious§!"
 
-  RUS_Elites_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
-  RUS_Elites_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
-  RUS_Elites_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
-  RUS_Elites_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
-  RUS_Elites_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
-  RUS_Elites_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
-  RUS_Elites_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+  RUS_Elites_Satisfaction_Growth_High_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1.5§!"
+  RUS_Elites_Satisfaction_Growth_Med_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1§!"
+  RUS_Elites_Satisfaction_Growth_Low_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+0.5§!"
+  RUS_Elites_Satisfaction_Growth_High_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1.5§!"
+  RUS_Elites_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
+  RUS_Elites_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
+  RUS_Elites_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
 
-  RUS_Military_Satisfaction_High:0 "Are §GPleased§!"
-  RUS_Military_Satisfaction_Med:0 "Are §YContent§!"
-  RUS_Military_Satisfaction_Low:0 "Are §RFurious§!"
+  RUS_Military_Satisfaction_High:0 "  £RUS_Military\n\n\nThe Military\nAre §GPleased§!"
+  RUS_Military_Satisfaction_Med:0 "  £RUS_Military\n\n\nThe Military\nAre §YContent§!"
+  RUS_Military_Satisfaction_Low:0 "  £RUS_Military\n\n\nThe Military\nAre §RFurious§!"
 
-  RUS_Military_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
-  RUS_Military_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
-  RUS_Military_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
-  RUS_Military_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
-  RUS_Military_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
-  RUS_Military_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
-  RUS_Military_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+  RUS_Military_Satisfaction_Growth_High_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1.5§!"
+  RUS_Military_Satisfaction_Growth_Med_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1§!"
+  RUS_Military_Satisfaction_Growth_Low_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+0.5§!"
+  RUS_Military_Satisfaction_Growth_High_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1.5§!"
+  RUS_Military_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
+  RUS_Military_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
+  RUS_Military_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
 
-  RUS_Workers_Satisfaction_High:0 "Are §GPleased§!"
-  RUS_Workers_Satisfaction_Med:0 "Are §YContent§!"
-  RUS_Workers_Satisfaction_Low:0 "Are §RFurious§!"
+  RUS_Workers_Satisfaction_High:0 "  £RUS_Workers\n\n\nThe Workers\nAre §GPleased§!"
+  RUS_Workers_Satisfaction_Med:0 "  £RUS_Workers\n\n\nThe Workers\nAre §YContent§!"
+  RUS_Workers_Satisfaction_Low:0 "  £RUS_Workers\n\n\nThe Workers\nAre §RFurious§!"
 
-  RUS_Workers_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
-  RUS_Workers_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
-  RUS_Workers_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
-  RUS_Workers_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
-  RUS_Workers_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
-  RUS_Workers_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
-  RUS_Workers_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+  RUS_Workers_Satisfaction_Growth_High_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1.5§!"
+  RUS_Workers_Satisfaction_Growth_Med_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1§!"
+  RUS_Workers_Satisfaction_Growth_Low_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+0.5§!"
+  RUS_Workers_Satisfaction_Growth_High_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1.5§!"
+  RUS_Workers_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
+  RUS_Workers_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
+  RUS_Workers_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
 
-  RUS_Peasants_Satisfaction_High:0 "Are §GPleased§!"
-  RUS_Peasants_Satisfaction_Med:0 "Are §YContent§!"
-  RUS_Peasants_Satisfaction_Low:0 "Are §RFurious§!"
+  RUS_Peasants_Satisfaction_High:0 "  £RUS_Peasants\n\n\nThe Peasants\nAre §GPleased§!"
+  RUS_Peasants_Satisfaction_Med:0 "  £RUS_Peasants\n\n\nThe Peasants\nAre §YContent§!"
+  RUS_Peasants_Satisfaction_Low:0 "  £RUS_Peasants\n\n\nThe Peasants\nAre §RFurious§!"
 
-  RUS_Peasants_Satisfaction_Growth_High_Pos:0 "£RUS_Arrow_Up §G+1.5§!"
-  RUS_Peasants_Satisfaction_Growth_Med_Pos:0 "£RUS_Arrow_Up §G+1§!"
-  RUS_Peasants_Satisfaction_Growth_Low_Pos:0 "£RUS_Arrow_Up §G+0.5§!"
-  RUS_Peasants_Satisfaction_Growth_High_Neg:0 "£RUS_Arrow_Down §R-1.5§!"
-  RUS_Peasants_Satisfaction_Growth_Med_Neg:0 "£RUS_Arrow_Down §R-1§!"
-  RUS_Peasants_Satisfaction_Growth_Low_Neg:0 " £RUS_Arrow_Down §R-0.5§!"
-  RUS_Peasants_Satisfaction_Growth_Zero:0 "£RUS_Arrow_Neutral §Y0§!"
+  RUS_Peasants_Satisfaction_Growth_High_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1.5§!"
+  RUS_Peasants_Satisfaction_Growth_Med_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+1§!"
+  RUS_Peasants_Satisfaction_Growth_Low_Pos:0 "Growth:\n\n£RUS_Arrow_Up\n\n§G+0.5§!"
+  RUS_Peasants_Satisfaction_Growth_High_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1.5§!"
+  RUS_Peasants_Satisfaction_Growth_Med_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-1§!"
+  RUS_Peasants_Satisfaction_Growth_Low_Neg:0 "Growth:\n\n£RUS_Arrow_Down\n\n§R-0.5§!"
+  RUS_Peasants_Satisfaction_Growth_Zero:0 "Growth:\n\n£RUS_Arrow_Neutral\n\n§Y0§!"
 
   ##########################
   #POWER STRUGGLE
@@ -208,8 +208,14 @@
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge for the Fallen"
   PB_RUS_revenge_for_the_fallen_desc:0 ""
+  PB_RUS_revenge_for_the_fallen_2:0 "Revenge for the Fallen"
+  PB_RUS_revenge_for_the_fallen_2_desc:0 ""
   RUS_church_modifier:0 "The State of Church Policy"
   RUS_church_modifier_desc:0 ""
+
+  ## ALEXANDRA IDEAS ##
+  
+  PB_RUS_Hunting_The_Black_Hundreds:0 "Hunting The Black Hundreds"
 
   ## Ideas For The Russian Collapse ##
 
